--- a/src/styles/blocks/burger.scss
+++ b/src/styles/blocks/burger.scss
@@ -10,16 +10,24 @@
     height: 234px;
   }
 
-  // &__shadow {
-  //   position: absolute;
-  //   background-color: #000;
-  //   opacity: 0.5;
-  //   bottom: -200px;
-  //   right: 0;
-  //   left: 0;
-  //   top: 400px;
+  &__shadow {
+    position: absolute;
+    background-color: #000;
+    opacity: 0.5;
+    bottom: -250px;
+    right: 0;
+    left: 0;
+    top: 400px;
 
-  // }
+    @include onTablet {
+      top: 226px;
+      bottom: -850px;
+    }
+
+    @include onDesktop {
+      top: 234px;
+    }
+  }
 
   &__container {
     @include container;
@@ -35,7 +43,7 @@
       padding: 40px 0;
     }
 
-    @include onSmall-desktop {
+    @include onDesktop {
       grid-template-columns: 1fr 1px 1fr ;
       gap: 102px;
       padding: 40px 0 48px;
