--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -1,24 +1,19 @@
 .icon {
   display: block;
   width: $icon-width;
-  padding-bottom: 100%;
+  // padding-bottom: 100%;
+  height: $icon-width;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   text-decoration: none;
 
-  &__container {
-    height: $cross-widht;
-    width: $cross-widht;
-    margin: 3px;
+  &--menu {
+    background-image: url(../images/icons/icon-burger.png);
   }
 
-  &--menu {
-    background-image: url(../images/icons/Vector.svg);
-  }
   &--cross {
-    width: $cross-widht;
-    background-image: url(../images/icons/Vector.png);
+    background-image: url(../images/icons/icon-close.png);
     margin-right: 34px;
   }
 }
