--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,14 +1,7 @@
 .logo {
   margin: 0 auto;
-
-  &-box {
-    @extend %font_h2;
-    font-size: 30px;
-    width: 55px;
-    height: 61px;
-    text-decoration: none;
-    text-align: center;
-  }
+  display: block;
+  padding: 9px 0 0;
 
   @include onTablet {
     grid-column: 4 / 6;
