--- a/src/styles/blocks/cur-events.scss
+++ b/src/styles/blocks/cur-events.scss
@@ -2,23 +2,43 @@
 
   &__article {
 
+    @include onDesktop {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      align-items: center;
+    }
+
     &--orange {
-      // position: relative;
+      @include onDesktop {
+        display: block;
+      }
     }
   }
 
   &__container {
     @include container;
+    position: relative;
+  }
+
+  &__content {
+    padding-top: 70px;
+
+    @include onTablet {
+      padding-top: 107px;
+    }
+
+    @include onDesktop {
+      padding-top: 304px;
+    }
   }
 
   &__grand-title {
-    margin: 70px 0 0;
+    margin: 0;
     @extend %font_h2;
 
     @include onTablet {
       font-size: 48px;
       text-align: left;
-      margin: 107px 0 0;
     }
   }
 
@@ -33,6 +53,11 @@
       height: 520px;
       margin-top: 48px;
     }
+
+    @include onDesktop {
+      grid-column: 1 /8;
+      margin-top: 104px;
+    }
   }
 
   &__img--tree {
@@ -44,6 +69,7 @@
 
     @include onDesktop {
       background-image: url(../images/cur-events/tree-L.png);
+      margin-top: 56px;
     }
   }
 
@@ -58,6 +84,7 @@
 
     @include onDesktop {
       background-image: url(../images/cur-events/girl-L.png);
+      margin-top: 104px;
     }
   }
 
@@ -65,22 +92,31 @@
     position: absolute;
     right: 0;
     left: 0;
-    z-index: -1;
+    // z-index: -1;
     margin-top: 60px;
     background-image: url(../images/cur-events/orange-S.png);
 
     @include onTablet {
       background-image: url(../images/cur-events/orange-M.png);
+      position: static;
       height: 390px;
       margin-top: 112px;
     }
 
     @include onDesktop {
       background-image: url(../images/cur-events/orange-L.png);
+      position: absolute;
+      height: 550px;
     }
   }
 
   &__info {
+
+    @include onDesktop {
+      grid-column: 9 /13;
+      height: min-content;
+
+    }
 
     &--orange {
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
@@ -88,8 +124,14 @@
       transform: translateY(210px);
 
       @include onTablet {
-        transform: translateY(390px);
+        transform: translateY(-90px);
         padding: 45px 55px 50px;
+        max-width: 570px;
+        margin: auto;
+      }
+
+      @include onDesktop {
+        transform: translateY(570px);
       }
     }
   }
@@ -104,6 +146,10 @@
 
     &--orange {
       justify-content: space-between;
+
+      // @include onTablet {
+      //   justify-content: start;
+      // }
     }
   }
 
@@ -118,6 +164,10 @@
 
     &--orange {
       margin: 24px 0 0 18px;
+
+      @include onTablet {
+        margin: 0;
+      }
     }
   }
 
@@ -132,6 +182,10 @@
 
     &--orange {
       margin: 20px 18px 0 0;
+
+      @include onTablet {
+        margin: 0 90px;
+      }
     }
   }
 
@@ -156,6 +210,11 @@
     &--orange {
       text-align: center;
       margin: 20px 0;
+
+      @include onTablet {
+        text-align: left;
+        margin: 16px 0 0;
+      }
     }
   }
 
@@ -178,7 +237,12 @@
     margin-top: 10px;
 
     @include onTablet {
-      width: 460px;
+      max-width: 460px;
+      margin-top: 15px;
+    }
+
+    @include onDesktop {
+      // width: 300px;
       margin-top: 15px;
     }
   }
