--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -18,11 +18,11 @@
     top: 0;
     right: 0;
 
-    transform: translateY(-100%);
+    transform: translateX(-100%);
     transition: transform 0.3s;
 
     &:target {
-      transform: translateY(0);
+      transform: translateX(0);
     }
   }
 }
