--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -27,14 +27,15 @@
   margin: 0 auto;
   max-width: 768px;
   padding: 0 20px;
+  // overflow-x: hidden;
 
   @include onTablet {
-    max-width: 1024px;
+    max-width: 1280px;
     padding: 0 34px;
   }
 
-  @include onSmall-desktop {
-    max-width: 1400px;
+  @include onDesktop {
+    max-width: 1600px;
     padding: 0 54px;
   }
 }
