grey zone works

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -22,17 +22,17 @@
   }
 
   &__grey-zone {
-    height: calc(100vh - $menu-height);
+    height: calc(100vh - #{$menu-height});
     background-color: $menu-grey-zone-color;
 
     @include onTablet {
       $menu-height: 225px;
-      height: calc(100vh - $menu-height);
+      height: calc(100vh - #{$menu-height});
     }
 
     @include onDesktop {
       $menu-height: 235px;
-      height: calc(100vh - $menu-height);
+      height: calc(100vh - #{$menu-height});
     }
   }
 
@@ -45,7 +45,7 @@
     @include onTablet {
       flex-direction: row;
       justify-content: space-between;
-      
+
       padding-top: 40px;
     }
   }
