--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,5 @@
 $menu-height: 400px;
-// $menu-height-grey-zone: calc(100vh - $menu-height);
+$menu-height-grey-zone: calc(100vh - #{$menu-height});
 
 $table-width: 768px;
 $desktop-width: 1280px;
