--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,7 @@
+@import "utils/reset";
 @import "utils/vars";
 @import "utils/mixins";
-@import "utils/extends";
+
+@import "header";
+@import "main";
+@import "typography";
