--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,12 +1,12 @@
-.header{
+.header {
 
-  &_background{
+  &_background {
     position: absolute;
     width: 100%;
-    top: 0px;
+    top: 0;
   }
 
-  &__open{
+  &__open {
     position: absolute;
     background-image: url(../images/icons/menu-burger.png);
     display: block;
@@ -16,7 +16,7 @@
     top: 33px;
   }
 
-  &__logo{
+  &__logo {
     position: absolute;
     display: block;
     width: 55px;
@@ -25,7 +25,7 @@
     top: 9px;
     transform: translateX(-50%);
   }
-  &__menu{
+  &__menu {
     position: absolute;
     background-color: $menu-color;
     color: $backdrop-text-color;
@@ -33,11 +33,11 @@
     font-size: 14px;
     line-height: 140.62%;
     padding: 0 20px;
-    width: calc(100% - 20px);
+    width: 100%;
 
   }
 
-  &__close{
+  &__close {
     position: absolute;
     background-image: url(../images/icons/menu-close.png);
     display: block;
@@ -47,52 +47,47 @@
     top: 32px;
   }
 
-  &__items{
+  &__items {
     display: flex;
     flex-direction: column;
 
-    & :first-child{
+    & :first-child {
       padding-bottom: 24px;
     }
   }
 
-  &_menu-puncts{
+  &_menu-puncts {
     display: flex;
     padding: 27px 0 24px 72px;
     gap: 35px;
   }
 
-  &__link{
+  &__link {
     color: $backdrop-text-color;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
   }
 
-  &__line{
+  &__line {
     border-bottom: 1px solid $backdrop-text-color;
     margin-bottom: 24px;
   }
 
-  &__graph{
+  &__graph {
     font-weight: 400;
     font-size: 14px;
     line-height: 140.62%;
     margin-bottom: 20px;
+  }
+
+  &__holiday {
     font-weight: 600;
     font-size: 14px;
     line-height: 150%;
-    margin-bottom: 16px;
   }
-
-  &__holiday{
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 150%;
-    margin-bottom:27px;
-  }
-
 }
+
 #backdrop {
   position: fixed;
   top: 0;
@@ -104,6 +99,7 @@
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
+
 #backdrop:target {
   opacity: 1;
   visibility: visible;
