--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -1,4 +1,4 @@
-html{
+html {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -23,6 +23,8 @@ p {
   margin: 0;
 }
 
-h1,h2,h3{
+h1,
+h2,
+h3 {
   margin: 0;
 }
