add task solution

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -50,6 +50,7 @@
   &__items {
     display: flex;
     flex-direction: column;
+    padding: 10px;
 
     & :first-child {
       padding-bottom: 24px;
@@ -81,10 +82,15 @@
     margin-bottom: 20px;
   }
 
+  &__time-work{
+    margin-bottom: 16px;
+  }
+
   &__holiday {
     font-weight: 600;
     font-size: 14px;
     line-height: 150%;
+    margin-bottom: 27px;
   }
 }
 
