--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,33 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onDasktop {
+  @media (min-width: 1100px) and (max-width: 4000px) {
+    @content;
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: 600px) and (max-width: 1099px) {
+    @content;
+  }
+}
+
+@mixin desktopCol {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  column-gap: 30px;
+}
+
+@mixin tabletCol {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  column-gap: 30px;
+}
+
+@mixin mobileCol {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+}
