--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -33,6 +33,11 @@
     display: flex;
     justify-content: center;
 
+    @include onTablet {
+      display: grid;
+      grid-template-columns: repeat(2, 50%);
+    }
+
     @include onDesktop {
       display: grid;
     }
@@ -44,9 +49,9 @@
     justify-content: center;
     align-items: center;
 
-    // @include onTablet {
-    //   display: flex;
-    // }
+    @include onTablet {
+      overflow: hidden;
+    }
 
     @include onDesktop {
       overflow: hidden;
