--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -40,6 +40,7 @@
 
     @include onDesktop {
       display: grid;
+      grid-template-columns: repeat(12, 1fr);
     }
   }
 
@@ -80,6 +81,13 @@
         transform: scale(1.1);
       }
     }
+
+    // &__item {
+    //   @include onTablet {
+    //     width: 340px;
+    //     height: 543px;
+    //   }
+    // }
   }
 
   &__fade {
