add task solution

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,9 +1,7 @@
 .header {
-
   &_background {
-    position: absolute;
     width: 100%;
-    top: 0;
+    margin-bottom: 20px;
   }
 
   &__open {
@@ -50,7 +48,6 @@
   &__items {
     display: flex;
     flex-direction: column;
-    padding: 10px;
 
     & :first-child {
       padding-bottom: 24px;
@@ -59,7 +56,7 @@
 
   &_menu-puncts {
     display: flex;
-    padding: 27px 0 24px 72px;
+    padding: 27px 0 24px 52px;
     gap: 35px;
   }
 
@@ -82,7 +79,7 @@
     margin-bottom: 20px;
   }
 
-  &__time-work{
+  &__time-work {
     margin-bottom: 16px;
   }
 
