--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -17,6 +17,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: #0f0e08;
 }
 
 p {
@@ -27,4 +28,9 @@ h1,
 h2,
 h3 {
   margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
+.conteiner {
+  padding: 0 20px;
 }
