add task solution

--- a/src/styles/_current.scss
+++ b/src/styles/_current.scss
@@ -57,7 +57,7 @@
       background-color: $square-colr;
     }
   }
-  &current__exhibition-block-mod {
+  &__exhibition-block-mod {
     padding: 20px;
   }
   &_paragraph {
@@ -70,6 +70,11 @@
     position: absolute;
     width: calc(100% - 40px);
     text-align: center;
+    left: 50%;
+    top: 153px;
+    transform: translateX(-50%);
+    padding-bottom: 20px;
+    background-color: #fff;
   }
 
 }
