--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -107,6 +107,12 @@
 
   &__tickets {
     display: flex;
+    text-decoration: none;
+    transition: $transition-all;
+
+    &:hover {
+      transform: translateX(5px);
+    }
   }
 
   &__tickets-title {
@@ -159,9 +165,7 @@
   &__top {
     display: grid;
     grid-template-columns: 18px 1fr 18px;
-
     align-items: center;
-
     padding-top: 9px;
     margin-bottom: 250px;
 
