--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -6,10 +6,20 @@
 
   &--menu-opener {
     background-image: url(../images/menu-opener.svg);
+    transition: $transition-all;
+
+    &:hover {
+      transform: scale(1.1) rotate(90deg);
+    }
   }
 
   &--menu-closer {
     background-image: url(../images/menu-closer.svg);
+    transition: $transition-all;
+
+    &:hover {
+      transform: scale(1.1) rotate(-90deg);
+    }
   }
 
   &--facebook {
@@ -17,17 +27,33 @@
     width: $icon-social-media-size;
     height: $icon-social-media-size;
     margin-right: 25px;
+
+    transition: $transition-all;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &--instagram {
     background-image: url(../images/instagram-3.svg);
     width: $icon-social-media-size;
     height: $icon-social-media-size;
+    transition: $transition-all;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &--up-arrow {
     background-image: url(../images/Arrow-up.svg);
     width: $icon-up-arrow-size;
     height: $icon-up-arrow-size;
+    transition: $transition-all;
+
+    &:hover {
+      transform: scale(1.03) translateY(-5px) rotate(-360deg);
+    }
   }
 }
