--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -42,7 +42,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     position: absolute;
     bottom: 0%;
     left: 50%;
@@ -50,15 +49,27 @@
 
     height: 140px;
     width: 280px;
-
     background-color: $white-color;
     box-shadow: 0 2px 0 $dark-green-color;
-
     text-decoration: none;
+
+    transition: $transition-all;
+
+    &:hover {
+      box-shadow: 0 3px 0 $font-color__title-hover;
+      height: 150px;
+      width: 300px;
+    }
 
     @include onTablet {
       height: 204px;
       width: 570px;
+
+      &:hover {
+        box-shadow: 0 3px 0 $font-color__title-hover;
+        height: 230px;
+        width: 600px;
+      }
     }
 
     @include onDesktop {
