--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -8,6 +8,13 @@
   line-height: 100%;
   color: $font-color__semi-black;
 
+  transition: $transition-all;
+
+  &:hover {
+    transform: scale(1.05);
+    font-weight: 800;
+  }
+
   &--header {
     text-align: center;
 
