--- a/src/styles/blocks/nav-block.scss
+++ b/src/styles/blocks/nav-block.scss
@@ -55,6 +55,12 @@
     list-style: none;
     width: 100px;
     margin-bottom: 24px;
+    transition: $transition-all;
+
+    &:hover {
+      transform: translateX(2px) scale(1.03);
+      text-shadow: 0.5px 0.5px 0.5px $green-color;
+    }
 
     @include onDesktop {
       width: 170px;
