--- a/src/styles/blocks/schedule-block.scss
+++ b/src/styles/blocks/schedule-block.scss
@@ -74,4 +74,18 @@
   &__bold {
     font-weight: 700;
   }
+
+  &__links {
+    text-decoration: none;
+    color: $font-color__total-black;
+    transition: $transition-all;
+
+    &:visited {
+      color: $font-color__dark-grey;
+    }
+
+    &:hover {
+      text-shadow: 0.5px 0.5px 0.5px $green-color;
+    }
+  }
 }
