--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,4 @@
 @import "./blocks/subscribe.scss";
 @import "./blocks/dots-block.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/reset.scss";
