--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -12,6 +12,7 @@ $font-color__total-black: #000;
 $font-color__semi-black: #0f0e08;
 $font-color__dark-grey: #4e4e4e;
 $font-color__light-grey: #687480;
+$font-color__title-hover: #f14a27;
 
 $green-color: #1a5a4c;
 $dots-gallery-color: #e0e0e0;
@@ -56,3 +57,5 @@ $gallery-photo-width-desktop: 100%;
 $events-photo-hight-mobile: 210px;
 $events-photo-hight-tablet: 520px;
 $events-photo-hight-desktop: 670px;
+
+$transition-all: all 0.3s;
