--- a/src/styles/blocks/dots-block.scss
+++ b/src/styles/blocks/dots-block.scss
@@ -26,9 +26,11 @@
     width: $dots-gallery-size;
     border-radius: 50%;
     margin-right: 16px;
+    transition: $transition-all;
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.4);
+      cursor: pointer;
     }
 
     &--active {
