--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,6 +7,10 @@
   scroll-behavior: smooth;
   font-family: "Montserrat", "Roboto", sans-serif;
 
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   &__menu {
     position: fixed;
     top: 0;
