--- a/src/styles/_current.scss
+++ b/src/styles/_current.scss
@@ -32,12 +32,11 @@
   &__block {
     position: relative;
     grid-column: 1 / -1;
-    margin-bottom: 60px;
+    margin-bottom: 183px;
   }
 
   &__depiction {
     width: 100%;
-    margin-bottom: 16px;
   }
 
   &__title {
@@ -69,12 +68,14 @@
   &__description-card {
     position: absolute;
     width: calc(100% - 40px);
+    height: 140px;
     text-align: center;
     left: 50%;
     top: 153px;
     transform: translateX(-50%);
     padding-bottom: 20px;
     background-color: #fff;
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   }
 
 }
