--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -3,6 +3,7 @@ html {
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -26,7 +27,8 @@ p {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   margin: 0;
   font-family: "Montserrat", sans-serif;
 }
