add task solution

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -2,9 +2,9 @@
 @import "utils/vars";
 @import "utils/mixins";
 
-@import "_gallery";
-@import "_current";
-@import "_header";
-@import "_tickets";
-@import "_subscription";
-@import "_footer";
+@import "gallery";
+@import "current";
+@import "header";
+@import "tickets";
+@import "subscription";
+@import "footer";
