add task solution

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,10 +1,10 @@
-@import "utils/reset";
-@import "utils/vars";
-@import "utils/mixins";
+@import "utils/reset.scss";
+@import "utils/vars.scss";
+@import "utils/mixins.scss";
 
-@import "gallery";
-@import "current";
-@import "header";
-@import "tickets";
-@import "subscription";
-@import "footer";
+@import "gallery.scss";
+@import "current.scss";
+@import "header.scss";
+@import "tickets.scss";
+@import "subscription.scss";
+@import "footer.scss";
