--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,10 +1,10 @@
-@import "utils/_reset.scss";
-@import "utils/_vars.scss";
-@import "utils/_mixins.scss";
+@import "./utils/_reset.scss";
+@import "./utils/_vars.scss";
+@import "./utils/_mixins.scss";
 
-@import "_gallery.scss";
-@import "_current.scss";
-@import "_header.scss";
-@import "_tickets.scss";
-@import "_subscription.scss";
-@import "_footer.scss";
+@import "./_gallery.scss";
+@import "./_current.scss";
+@import "./_header.scss";
+@import "./_tickets.scss";
+@import "./_subscription.scss";
+@import "./_footer.scss";
