--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
+  font-family: "IBMPlexSans";
+  src: url("../fonts/IBMPlexSans-Regular.ttf") format("ttf");
   font-weight: normal;
   font-style: normal;
 }
