html validator passed

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,12 +1,15 @@
 .events {
-  margin-bottom: 60px;
 
-  @include onTablet {
-    margin-bottom: 64px;
-  }
+  &__article {
+    margin-bottom: 60px;
 
-  @include onDesktop {
-    margin-bottom: 104px;
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 104px;
+    }
   }
 
   &__photo-container {
