--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -48,4 +48,16 @@
       }
     }
   }
+
+  &--events-margin-bottom {
+    margin-bottom: 20px;
+
+    @include onTablet {
+      margin-bottom: 40px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 0;
+    }
+  }
 }
