--- a/src/styles/blocks/nav-block.scss
+++ b/src/styles/blocks/nav-block.scss
@@ -1,4 +1,6 @@
 .nav-block {
+  display: flex;
+
   &--footer {
     margin-bottom: 80px;
 
@@ -12,42 +14,18 @@
   }
 
   &__list {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style: none;
-  }
-
-  &__group {
     display: flex;
     flex-direction: column;
+    list-style: none;
     margin-right: 30px;
 
-    @include onTablet {
-      margin-right: 20px;
-    }
-
-    @include onDesktop {
-      margin-right: 30px;
-    }
-
     &:last-child {
-      margin: 0;
+      margin-right: 0;
     }
 
     &--footer {
-      color: $font-color__semi-black;
       flex-basis: 130px;
       flex-grow: 1;
-      margin-right: 20px;
-
-      &:last-child {
-        margin-right: 0;
-      }
-
-      @include onDesktop {
-        margin-right: 30px;
-      }
     }
   }
 
@@ -62,8 +40,17 @@
       text-shadow: 0.5px 0.5px 0.5px $green-color;
     }
 
+    @include onTablet {
+      margin: 0 20px 24px 0;
+    }
+
     @include onDesktop {
       width: 170px;
+      margin: 0 30px 24px 0;
+    }
+
+    &--footer {
+      width: 130px;
     }
   }
 
