--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -105,7 +105,7 @@
 
   &__button {
     @extend %background-image-cover;
-    background-image: url(../images/RectangleForm.jpg);
+    background-image: url(../images/button-subscribe.jpg);
 
     border: none;
     box-sizing: border-box;
@@ -114,21 +114,16 @@
     height: $subscribe-form-size-mobile;
     width: $subscribe-form-size-mobile;
 
-    :hover {
-      cursor: pointer;
+    cursor: pointer;
+    transition: $transition-all;
+
+    &:hover {
+      transform: translateX(3px);
     }
 
     @include onTablet {
       height: $subscribe-form-size-tablet;
       width: $subscribe-form-size-tablet;
     }
-  }
-
-  &__button-arrow {
-    @extend %background-image-contain;
-    background-image: url(../images/FormArrow.svg);
-
-    height: $subscribe-form-size-arrow;
-    width: $subscribe-form-size-arrow;
   }
 }
