--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,20 +1,23 @@
 .gallery {
-  display: flex;
-  flex-direction: row;
 
-  box-sizing: border-box;
-  overflow: hidden;
+  &__container {
+    display: flex;
+    flex-direction: row;
 
-  width: 100%;
-  margin-bottom: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
 
-  @include onTablet {
-    margin-bottom: 32px;
-  }
+    width: 100%;
+    margin-bottom: 20px;
 
-  @include onDesktop {
-    height: 100%;
-    flex-direction: column;
+    @include onTablet {
+      margin-bottom: 32px;
+    }
+
+    @include onDesktop {
+      height: 100%;
+      flex-direction: column;
+    }
   }
 
   &__photo-row {
