add task solution

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,92 +1,87 @@
-.footer {
-  padding: 0 20px;
+.footer{
+  display: flex;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
+  margin-bottom: 87px;
 
   &__icons {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 40px;
+    flex-direction: column;
+    gap: 62px;
   }
 
   &__socials {
     display: flex;
-    gap: 25px;
+    gap: 28px;
   }
 
-  &__data {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 20px;
-    // margin-bottom: 70px;
+  &__social {
+    width: 24px;
+    height: 24px;
+    transition: transform 0.6s ease;
+    transform-origin: center;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
-  &__graph {
-    grid-column: 1;
-  }
-
-  &__contacts {
-    grid-column: 2;
+  &__graph{
+    width: 170px;
   }
 
   &__title {
-    line-height: 140.62%;
+    padding-bottom: 20px;
   }
 
   &__time-work {
-    line-height: 150%;
+    padding-bottom: 20px;
+  }
+
+  &__contacts {
+    width: 170px;
+  }
+
+  &__data{
+    display: flex;
     font-weight: 600;
-    margin-bottom: 30px;
-  }
-
-  &__holiday {
     line-height: 150%;
-  }
-
-  &__address {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 150%;
+    padding: 0 65px 0 130px;
+    gap: 30px;
   }
 
   &__line {
-    border-bottom: 1px solid rgba(26, 90, 76, 0.5);
-    margin-bottom: 40px;
-  }
-
-  &__items {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  &__link {
-    margin-bottom: 20px;
+    height: 260px;
+    margin: 0;
   }
 
   &__links {
-    margin-bottom: 80px;
+    display: flex;
+    gap: 32px;
+    padding-left: 65px;
+  }
+
+  &__link {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 170px;
   }
 
   &__captcha {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
     font-weight: 300;
     font-size: 12px;
     line-height: 140.62%;
-    gap: 10px;
-    margin-bottom: 60px;
-  }
-
-  &__circle {
-    display: block;
-    width: 50px;
-    height: 50px;
-    border: 1px solid $menu-color;
-    border-radius: 50%;
-    margin: 0 0 20px auto;
-    background: url(../images/icons/Vector1.png) center no-repeat;
+    color: #0F0E08;
+    padding-bottom: 35px;
   }
 }
