--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,23 +1,13 @@
 .gallery {
-  margin-bottom: 100px;
-
-  &__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 100%;
-    text-align: center;
-    margin-bottom: 40px;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 56px;
+  margin-bottom: 200px;
 
   &__slider {
     display: flex;
-    overflow: hidden;
-    margin-bottom: 20px;
-  }
-
-  &__image {
-    padding: 0 20px;
-    width: 100%;
+    gap: 30px;
+    flex-wrap: wrap;
   }
 
   &__items {
@@ -26,15 +16,23 @@
     justify-content: center;
   }
 
-  &__item {
-    width: 9px;
-    height: 9px;
-    background: #e0e0e0;
-    border-radius: 50%;
+  // &__item {
+  //   width: 9px;
+  //   height: 9px;
+  //   background: #e0e0e0;
+  //   border-radius: 50%;
 
-    &:nth-child(1) {
-      background: $menu-color;
+  //   &:nth-child(1) {
+  //     background: $menu-color;
+  //   }
+  // }
+
+  &__image {
+    transition: transform 0.3s ease;
+    transform-origin: center;
+
+    &:hover {
+      transform: scale(1.2);
     }
-
   }
 }
