--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,10 +1,12 @@
 @import "./utils/reset.scss";
-@import "./utils/vars.scss";
 @import "./utils/mixins.scss";
+@import "./utils/vars.scss";
+@import "./utils/utility.scss";
 
-@import "./gallery.scss";
-@import "./current.scss";
+
+@import "./page.scss";
 @import "./header.scss";
-@import "./tickets.scss";
+@import "./events.scss";
+@import "./gallery.scss";
 @import "./subscription.scss";
 @import "./footer.scss";
