--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -1,52 +1,58 @@
 .subscription {
-  background-image: url(../images/gallery/form-background.png);
-  height: 386px;
   color: #fff;
   text-align: center;
-  padding: 0 20px;
   background-size: cover;
   background-position: center;
-  margin-bottom: 50px;
+  background-image: url(../images/gallery/form-background.png);
+  padding: 163px 355px;
+  margin-bottom: 48px;
 
   &__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 100%;
-    padding: 88px 20px 20px;
-
+    color: #fff;
+    margin-bottom: 16px;
   }
 
   &__description {
+    margin-bottom: 72px;
     font-weight: 400;
     font-size: 18px;
-    line-height: 150%;
-    margin-bottom: 50px;
+    line-height: 100%;
   }
 
   &__form {
     display: flex;
+    gap: 30px;
+    justify-content: center;
   }
 
   &__input {
-    flex-grow: 1;
     border: none;
+    height: 70px;
+    width: 470px;
+    padding-left: 40px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 100%;
 
     &:focus-visible {
       outline: none;
     }
 
-    &::placeholder {
-      text-indent: 22px;
-    }
   }
 
   &__button {
     background: #f14a27;
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     background-image: url(../images/icons/Vector-form.png);
     background-repeat: no-repeat;
     background-position: center center;
     border: none;
+    transition: all 0.6s ease;;
+
+    &:hover {
+      background: url(../images/icons/Vector.png) transparent no-repeat center;
+      border: 1px solid #f14a27;
+    }
   }
 }
