--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,109 +1,83 @@
-.header {
-  &_background {
-    width: 100%;
-    margin-bottom: 20px;
+.header{
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 30px;
+    padding-left: 55px ;
+    margin-bottom: 200px;
+
+  &_background{
+    width: 725px;
+  }
+
+  &__link {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 72px;
+
   }
 
   &__open {
     position: absolute;
-    background-image: url(../images/icons/menu-burger.png);
+    left: 56px;
+    top: 40px;
     display: block;
-    width: 18px;
-    height: 12px;
-    left: 23px;
-    top: 33px;
-  }
+    width: 24px;
+    height: 24px;
+    background: url(../images/icons/menu-burger.png) no-repeat center;
 
-  &__logo {
-    position: absolute;
-    display: block;
-    width: 55px;
-    height: 61px;
-    left: 50%;
-    top: 9px;
-    transform: translateX(-50%);
-  }
-  &__menu {
-    position: absolute;
-    background-color: $menu-color;
-    color: $backdrop-text-color;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 140.62%;
-    padding: 0 20px;
-    width: 100%;
+    transition: transform 0.3s ease;
+    transform-origin: center;
 
-  }
-
-  &__close {
-    position: absolute;
-    background-image: url(../images/icons/menu-close.png);
-    display: block;
-    width: 13px;
-    height: 13px;
-    left: 26px;
-    top: 32px;
-  }
-
-  &__items {
-    display: flex;
-    flex-direction: column;
-
-    & :first-child {
-      padding-bottom: 24px;
+    &:hover {
+      transform: scale(1.2);
     }
   }
 
-  &_menu-puncts {
-    display: flex;
-    padding: 27px 0 24px 52px;
-    gap: 35px;
+  &__title {
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 120%;
+    padding: 205px 0 90px;
   }
 
-  &__link {
-    color: $backdrop-text-color;
+  &_ticket {
+    display: flex;
+    padding-left: 200px;
+
+  }
+
+  &__button {
+    display: block;
+    width: 70px;
+    height: 70px;
+    background-image: url(../images/icons/Vector.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-color: $menu-color;
+    transition: all 0.6s ease;;
+
+  &:hover {
+    background: url(../images/icons/Vector-form.png) transparent no-repeat center;
+    border: 1px solid $menu-color;
+  }
+  }
+
+  &__inskription {
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    border: 1px solid $menu-color;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
   }
-
-  &__line {
-    border-bottom: 1px solid $backdrop-text-color;
-    margin-bottom: 24px;
-  }
-
-  &__graph {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 140.62%;
-    margin-bottom: 20px;
-  }
-
-  &__time-work {
-    margin-bottom: 16px;
-  }
-
-  &__holiday {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 150%;
-    margin-bottom: 27px;
-  }
-}
-
-#backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-}
-
-#backdrop:target {
-  opacity: 1;
-  visibility: visible;
 }
