add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,4 +1,4 @@
-.footer{
+.footer {
   display: flex;
   font-weight: 400;
   font-size: 14px;
@@ -27,7 +27,7 @@
     }
   }
 
-  &__graph{
+  &__graph {
     width: 170px;
   }
 
@@ -43,7 +43,7 @@
     width: 170px;
   }
 
-  &__data{
+  &__data {
     display: flex;
     font-weight: 600;
     line-height: 150%;
@@ -81,7 +81,7 @@
     font-weight: 300;
     font-size: 12px;
     line-height: 140.62%;
-    color: #0F0E08;
+    color: #0f0e08;
     padding-bottom: 35px;
   }
 }
