--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,12 +1,12 @@
-.header{
-    position: relative;
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 30px;
-    padding-left: 55px ;
-    margin-bottom: 200px;
+.header {
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 30px;
+  padding-left: 55px ;
+  margin-bottom: 200px;
 
-  &_background{
+  &_background {
     width: 725px;
   }
 
@@ -61,12 +61,12 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-color: $menu-color;
-    transition: all 0.6s ease;;
+    transition: all 0.3s ease;
 
-  &:hover {
-    background: url(../images/icons/Vector-form.png) transparent no-repeat center;
-    border: 1px solid $menu-color;
-  }
+    &:hover {
+      background: url(../images/icons/Vector-form.png) transparent no-repeat center;
+      border: 1px solid $menu-color;
+    }
   }
 
   &__inskription {
