--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -31,6 +31,7 @@
   &__exhibition-block {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 20px;
   }
 
@@ -45,14 +46,14 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 150%;
-    color: #1A5A4C;
+    color: #1a5a4c;
   }
 
   &__square {
     display: inline-block;
     width: 15px;
     height: 15px;
-    background: #F14A27;
+    background: #f14a27;
   }
 
   &_paragraph {
@@ -86,11 +87,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   }
 
-  &__exhibition-block {
-    display: flex;
-    justify-content: space-between;
-  }
 }
