--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -48,7 +48,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     border: none;
-    transition: all 0.6s ease;;
+    transition: all 0.3s ease;
 
     &:hover {
       background: url(../images/icons/Vector.png) transparent no-repeat center;
