--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,17 +1,17 @@
 .header {
   position: relative;
 
-  &__top-actions {
-    position: absolute;
-
-    margin: 33px 0 0 20px;
-
+  &__content {
     @include onTablet {
-      margin: 39px 0 0 34px;
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-start;
     }
 
     @include onDesktop {
-      margin: 39px 0 0 55px;
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-start;
     }
   }
 
@@ -23,6 +23,7 @@
   }
 
   &__bg {
+    position: relative;
     box-sizing: border-box;
     height: 300px;
     width: 100vw;
@@ -31,6 +32,16 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    @include onTablet {
+      height: 384px;
+      width: 50vw;
+    }
+
+    @include onDesktop {
+      height: 655px;
+      width: 60vw;
+    }
   }
 
   &__logo {
@@ -51,6 +62,22 @@
     }
   }
 
+  &__tickets {
+    margin-top: 20px;
+
+    @include onTablet {
+      margin-top: 127px;
+      padding-right: 34px;
+      padding-left: 34px;
+    }
+
+    @include onDesktop {
+      margin-top: 206px;
+      padding-right: 64px;
+      padding-left: 56px;
+    }
+  }
+
   &__page-tittle {
     font-family: "Montserrat", sans-serif;
     font-style: normal;
@@ -64,35 +91,41 @@
     @include onTablet {
       font-size: 54px;
       line-height: 65px;
+      text-align: left;
     }
 
     @include onDesktop {
       font-size: 72px;
       line-height: 86px;
+      text-align: left;
     }
   }
 
   &__buy-tickets {
-    padding: 0 20px;
+    @include hover (box-shadow, 1px 1px 5px $mainGreenColor);
 
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
 
-    align-items: center;
+    margin: 20px auto 0;
+    max-width: 280px;
+
+    @include onTablet {
+      margin: 38px 0 0;
+    }
+
+    @include onDesktop {
+      margin-top: 90px;
+    }
   }
 
   &__buy-tittle {
     display: grid;
     box-sizing: border-box;
     flex-grow: 2;
-    justify-content: center;
-    justify-items: center;
+    align-content: center;
 
     width: 100%;
     height: 50px;
-
-    padding: 18px 0;
 
     font-weight: 500;
     font-size: 16px;
@@ -100,31 +133,19 @@
     text-transform: uppercase;
     text-align: center;
     text-decoration: none;
+    color: $mainTextColor;
 
     border: 1px solid $mainGreenColor;
+
+    @include onTablet {
+      height: 70px;
+    }
   }
 
   &__buy-button {
     box-sizing: border-box;
     display: grid;
     flex-grow: 1;
-    justify-content: center;
-    justify-items: center;
-
-    width: 50px;
-    height: 50px;
-
-    padding: 18px 0;
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
-    text-transform: uppercase;
-    text-align: center;
-    text-decoration: none;
-
-    color: #fff;
-
-    background-color: $mainGreenColor;
+    align-content: center;
   }
 }
