--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,8 +1,11 @@
 .icon {
+  box-sizing: border-box;
+
   width: 24px;
   height: 24px;
+  padding: 5px;
 
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: auto;
 }
