--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,12 @@
 @import "./blocks/header.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/logo.scss";
+@import "./blocks/button.scss";
+@import "./blocks/container.scss";
+@import "./blocks/top-actions.scss";
+@import "./blocks/menu.scss";
+
+h1 {
+  margin: 0;
+  padding: 0;
+}
