--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,7 @@
 $mainGreenColor: #1a5a4c;
 $mainTextColor: #0f0e08;
+$colorWhite: #fff;
 $paragraphColor: #4e4e4e;
 $captionColor: #687480;
 $decorativeColor: #f14a27;
+$animationDuration: 0.3s;
