--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,8 +6,19 @@
   padding-left: 55px ;
   margin-bottom: 200px;
 
+  @include tablet {
+    padding-left: 34px ;
+    gap: 20px;
+  }
+
+
+
   &_background {
     width: 725px;
+
+    @include tablet {
+      width: 50%;
+    }
   }
 
   &__link {
@@ -21,6 +32,10 @@
     width: 170px;
     height: 72px;
 
+    @include tablet {
+      transform: translateX(0);
+      width: 220px;
+    }
   }
 
   &__open {
@@ -37,6 +52,15 @@
 
     &:hover {
       transform: scale(1.2);
+
+      @include tablet {
+        transform: scale none;
+      }
+    }
+
+    @include tablet {
+      left: 37px;
+      top: 45px;
     }
   }
 
@@ -45,12 +69,21 @@
     font-size: 72px;
     line-height: 120%;
     padding: 205px 0 90px;
+
+    @include tablet {
+      font-size: 54px;
+      padding: 127px 0 38px;
+    }
   }
 
   &_ticket {
     display: flex;
     padding-left: 200px;
 
+    @include tablet {
+      padding-left: 0;
+      width: 270px;
+    }
   }
 
   &__button {
@@ -66,6 +99,11 @@
     &:hover {
       background: url(../images/icons/Vector-form.png) transparent no-repeat center;
       border: 1px solid $menu-color;
+
+      @include tablet {
+        background: none;
+        border: none;
+      }
     }
   }
 
