--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,11 @@
-@import "./utils/reset.scss";
-@import "./utils/mixins.scss";
-@import "./utils/vars.scss";
-@import "./utils/utility.scss";
+@import "../styles/utils/reset.scss";
+@import "../styles/utils/mixins.scss";
+@import "../styles/utils/vars.scss";
+@import "../styles/utils/utility.scss";
 
-@import "./page.scss";
-@import "./header.scss";
-@import "./events.scss";
-@import "./gallery.scss";
-@import "./subscription.scss";
-@import "./footer.scss";
+@import "../styles/page.scss";
+@import "../styles/header.scss";
+@import "../styles/events.scss";
+@import "../styles/gallery.scss";
+@import "../styles/subscription.scss";
+@import "../styles/footer.scss";
