--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -3,6 +3,10 @@
   margin: auto;
   position: relative;
 
+  @include tablet {
+    max-width: 768px;
+  }
+
   &__backdrop {
     position: fixed;
     max-width: 1280px;
@@ -13,6 +17,10 @@
     color: $backdrop-text-color;
     left: 0;
     right: 0;
+
+    @include tablet {
+      max-width: 768px;
+    }
   }
 
   &__menu {
@@ -20,10 +28,15 @@
     max-width: 1280px;
     margin: auto;
     display: flex;
-    // height: 193px;
     background: $menu-color;
     padding: 40px 155px 32px 182px;
     gap: 102px;
+
+    @include tablet {
+      max-width: 768px;
+      padding: 40px 35px 40px 96px;
+      gap: 38px;
+    }
   }
 
   &__close {
@@ -40,6 +53,15 @@
 
     &:hover {
       transform: scale(1.2);
+
+      @include tablet {
+        transform: none;
+      }
+    }
+
+    @include tablet {
+      left: 40px;
+      top: 45px;
     }
   }
 
@@ -49,6 +71,11 @@
     font-weight: 500;
     font-size: 22px;
     line-height: 100%;
+
+    @include tablet {
+      gap: 20px;
+      font-size: 16px;
+    }
   }
 
   &__link {
@@ -57,11 +84,20 @@
     width: 145px;
     &:hover {
       text-decoration: underline;
+
+      @include tablet {
+        text-decoration: none;
+      }
+    }
+
+    @include tablet {
+      width: 100px;
     }
   }
 
   &__line {
     height: 145px;
+    margin: 0;
 
   }
 
@@ -70,6 +106,11 @@
     flex-direction: column;
     gap: 30px;
     width: 168px;
+
+    @include tablet {
+      gap: 24px;
+      width: 100px;
+    }
   }
 
   &__paragraphs {
@@ -78,6 +119,10 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 150%;
+
+    @include tablet {
+      gap: 38px;
+    }
   }
 
   &__graph {
@@ -89,10 +134,18 @@
 
   &__time-work {
     width: 170px;
+
+    @include tablet {
+      width: 159px;
+    }
   }
 
   &__holiday {
     width: 170px;
+
+    @include tablet {
+      width: 159px;
+    }
   }
 }
 
