--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -7,6 +7,10 @@
   padding: 163px 355px;
   margin-bottom: 48px;
 
+  @include tablet {
+    padding: 82px 154px;
+  }
+
   &__title {
     color: #fff;
     margin-bottom: 16px;
@@ -17,12 +21,20 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 100%;
+
+    @include tablet {
+      margin-bottom: 64px;
+    }
   }
 
   &__form {
     display: flex;
     gap: 30px;
     justify-content: center;
+
+    @include tablet {
+      gap: 16px;
+    }
   }
 
   &__input {
@@ -38,6 +50,9 @@
       outline: none;
     }
 
+    @include tablet {
+      width: 374px;
+    }
   }
 
   &__button {
@@ -53,6 +68,11 @@
     &:hover {
       background: url(../images/icons/Vector.png) transparent no-repeat center;
       border: 1px solid #f14a27;
+
+      @include tablet {
+        background: none;
+        border: none;
+      }
     }
   }
 }
