--- a/src/styles/utils/_utility.scss
+++ b/src/styles/utils/_utility.scss
@@ -6,8 +6,12 @@ html {
   scroll-behavior: smooth;
 }
 
-.conteiner {
+.container {
   padding: 0 55px;
+
+  @include tablet {
+    padding: 0 35px;
+  }
 
 }
 
