--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -4,10 +4,18 @@
   gap: 56px;
   margin-bottom: 104px;
 
+  @include tablet {
+    gap: 48px;
+  }
+
   &__conteiner {
     display: flex;
     flex-direction: column;
     gap: 104px;
+
+    @include tablet {
+      gap: 64px;
+    }
   }
 
   &__block {
@@ -15,17 +23,33 @@
     justify-content: space-between;
     align-items: center;
 
+    @include tablet {
+      flex-direction: column;
+      align-items: initial;
+    }
   }
 
+  &__depiction {
+    @include tablet {
+      width: 100%;
+      margin-bottom: 40px;
+    }
+  }
   &__title {
     display: flex;
     align-items: center;
     gap: 20px;
     padding: 30px 0 15px;
+
+
   }
 
   &__description {
     width: 370px;
+
+    @include tablet {
+      width: 460px;
+    }
   }
 
   &__exhibition-block {
@@ -68,11 +92,21 @@
     height: 550px;
     width: 100%;
     margin-bottom: 302px;
+
+    @include tablet {
+      padding: 35px;
+      height: 390px;
+      margin-bottom: 208px;
+    }
   }
 
   &__depiction-img {
     width: 100%;
     height: 550px;
+
+    @include tablet {
+      height: 390px;
+    }
   }
 
   &__description-card {
@@ -88,6 +122,13 @@
     flex-direction: column;
     gap: 15px;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    @include tablet {
+      width: 570px;
+      height: 204px;
+      top: 306px;
+      padding: 45px 55px 50px;
+    }
   }
 
 }
