--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,6 +5,15 @@
   line-height: 100%;
   margin-bottom: 87px;
 
+  @include tablet {
+    margin-bottom: 120px;
+    flex-direction: column;
+  }
+
+  &__top {
+    display: flex;
+  }
+
   &__icons {
     display: flex;
     flex-direction: column;
@@ -24,11 +33,19 @@
 
     &:hover {
       transform: scale(1.2);
+
+      @include tablet {
+        transform: none;
+      }
     }
   }
 
   &__graph {
     width: 170px;
+
+    @include tablet {
+      width: 220px;
+    }
   }
 
   &__title {
@@ -41,6 +58,10 @@
 
   &__contacts {
     width: 170px;
+
+    @include tablet {
+      width: 220px;
+    }
   }
 
   &__data {
@@ -49,22 +70,43 @@
     line-height: 150%;
     padding: 0 65px 0 130px;
     gap: 30px;
+
+    @include tablet {
+      padding-left: 40px;
+      margin-bottom: 64px;
+    }
   }
 
   &__line {
     height: 260px;
     margin: 0;
+
+    @include tablet {
+      transform: rotateY(180deg);
+      height: 0px;
+      width: 460px;
+      margin: auto;
+    }
   }
 
   &__links {
     display: flex;
     gap: 32px;
     padding-left: 65px;
+
+   @include tablet {
+    padding: 64px 0 120px;
+    margin: auto;
+    }
   }
 
   &__link {
     &:hover {
       text-decoration: underline;
+
+      @include tablet {
+        text-decoration: none;
+      }
     }
   }
 
@@ -73,6 +115,10 @@
     flex-direction: column;
     gap: 20px;
     width: 170px;
+
+    @include tablet {
+      width: 220px;
+    }
   }
 
   &__captcha {
@@ -83,5 +129,9 @@
     line-height: 140.62%;
     color: #0f0e08;
     padding-bottom: 35px;
+
+    @include tablet {
+      padding: 0 35px 35px;
+    }
   }
 }
