--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin tablet {
-  @media (min-width: 640px) {
+  @media (min-width: 768px) and (max-width: 1280px) {
     @content;
   }
 }
 
-@mixin desktop {
-  @media (min-width: 1280px) {
+@mixin mobile {
+  @media (min-width: 320px) {
     @content;
   }
 }
