add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -83,7 +83,7 @@
 
     @include tablet {
       transform: rotateY(180deg);
-      height: 0px;
+      height: 0;
       width: 460px;
       margin: auto;
     }
@@ -94,9 +94,9 @@
     gap: 32px;
     padding-left: 65px;
 
-   @include tablet {
-    padding: 64px 0 120px;
-    margin: auto;
+    @include tablet {
+      padding: 64px 0 120px;
+      margin: auto;
     }
   }
 
