--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -36,7 +36,7 @@
       width: 9px;
       height: 9px;
       border-radius: 50%;
-      background: #e0e0e0
+      background: #e0e0e0;
     }
   }
 
@@ -65,5 +65,5 @@
 }
 
 .active {
-background-color: $menu-color;
+  background-color: $menu-color;
 }
