--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,6 +4,7 @@
   font-size: 14px;
   line-height: 21px;
   color: #fff;
+  font-family: "IBM Plex Sans", sans-serif;
 
   &__content {
     background-color: #1a5a4c;
