--- a/src/styles/blocks/line.scss
+++ b/src/styles/blocks/line.scss
@@ -15,9 +15,14 @@
     background-color: #1a5a4c80;
     margin-bottom: 40px;
 
+    @include inIpad {
+      grid-column: 1/7;
+    }
+
     @include inDesktop {
       height: 100%;
       width: 1px;
+      grid-column: 7/7;
     }
   }
 
