--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -62,13 +62,14 @@
 
   &__photo {
     width: 100%;
+    height: 410px;
+    overflow: hidden;
     margin-bottom: 20px;
 
     @include onTablet {
-      width: auto;
+      width: 100%;
+      height: 543px;
       margin-bottom: 32px;
-      object-fit: contain;
-      object-position: center;
     }
 
     @include onDesktop {
@@ -82,12 +83,17 @@
       }
     }
 
-    // &__item {
-    //   @include onTablet {
-    //     width: 340px;
-    //     height: 543px;
-    //   }
-    // }
+    &__item {
+      @include onTablet {
+        height: 543px;
+        object-fit: cover;
+        object-position: center;
+      }
+
+      @include onDesktop {
+        height: fit-content;
+      }
+    }
   }
 
   &__fade {
