--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -35,7 +35,8 @@
 
     @include onTablet {
       display: grid;
-      grid-template-columns: repeat(2, 50%);
+      grid-template-columns: repeat(2, 340px);
+      grid-gap: 20px;
     }
 
     @include onDesktop {
@@ -68,7 +69,7 @@
 
     @include onTablet {
       width: 100%;
-      height: 543px;
+      // height: 543px;
       margin-bottom: 32px;
     }
 
@@ -86,12 +87,13 @@
     &__item {
       @include onTablet {
         height: 543px;
+        width: 100%;
         object-fit: cover;
-        object-position: center;
+        object-position: top;
       }
 
       @include onDesktop {
-        height: fit-content;
+        // height: fit-content;
       }
     }
   }
